force-app/main/default/objects/Oktopost_Social_Activity__c/Oktopost_Social_Activity__c.object-meta.xml
<CustomObject>
    <label>Oktopost Social Activity</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Reading Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Oktopost Social Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>