force-app/main/default/objects/Oktopost_Social_Activity__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oktopost Social Activities</relationshipLabel>
    <relationshipName>Oktopost_Social_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>