force-app/main/default/objects/Oktopost_Social_Activity__c/fields/Activity_Id__c.field-meta.xml
<CustomField>
    <fullName>Activity_Id__c</fullName>
    <label>Activity Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>