force-app/main/default/objects/Oktopost_Social_Activity__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Oktopost Social Activities</relationshipLabel>
    <relationshipName>Oktopost_Social_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>