force-app/main/default/objects/Oktopost_Social_Activity__c/fields/Campaign_Tags__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Tags__c</fullName>
    <label>Campaign Tags</label>
    <type>TextArea</type>
</CustomField>