force-app/main/default/objects/Oktopost_Social_Activity__c/fields/Comment_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Comment_Keywords__c</fullName>
    <label>Comment Keywords</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>