force-app/main/default/objects/Oktopost_Social_Activity__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Oktopost Social Activities</relationshipLabel>
    <relationshipName>Oktopost_Social_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>