force-app/main/default/objects/Oktopost_Social_Activity__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Oktopost Social Activities</relationshipLabel>
    <relationshipName>Oktopost_Social_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>