force-app/main/default/objects/Oktopost_Social_Activity__c/fields/OktDate__c.field-meta.xml
<CustomField>
    <fullName>OktDate__c</fullName>
    <label>OktDate</label>
    <type>Date</type>
</CustomField>