force-app/main/default/objects/Oktopost_Social_Activity__c/fields/Post_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Post_DateTime__c</fullName>
    <label>Post Datetime</label>
    <type>DateTime</type>
</CustomField>