force-app/main/default/objects/Oktopost_Social_Activity__c/fields/Post_Source__c.field-meta.xml
<CustomField>
    <fullName>Post_Source__c</fullName>
    <label>Post Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>