force-app/main/default/objects/Oktopost_Social_Activity__c/fields/Poster_Name__c.field-meta.xml
<CustomField>
    <fullName>Poster_Name__c</fullName>
    <label>Poster Name</label>
    <type>TextArea</type>
</CustomField>