force-app/main/default/objects/Oktopost_Social_Activity__c/fields/Remote_URL__c.field-meta.xml
<CustomField>
    <fullName>Remote_URL__c</fullName>
    <label>Remote Url</label>
    <type>Url</type>
</CustomField>