force-app/main/default/objects/Oktopost_Social_Activity__c/fields/Sentiment_Score__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Score__c</fullName>
    <formula>IF( Sentiment__c = &quot;positive&quot;, 100, IF (Sentiment__c = &quot;negative&quot;, 0, IF ( Sentiment__c = &quot;neutral&quot;, 50, IF(Sentiment__c = &quot;mixed&quot;, 50, NULL))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sentiment Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>