force-app/main/default/objects/Oktopost_Social_Activity__c/fields/Who_Type__c.field-meta.xml
<CustomField>
    <fullName>Who_Type__c</fullName>
    <formula>IF( ISBLANK(Contact__c), &quot;Lead&quot;, &quot;Contact&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Who Type</label>
    <type>Text</type>
</CustomField>