force-app/main/default/objects/Oktopost_Social_Activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Lead__c</columns>
    <columns>Activity_DateTime__c</columns>
    <columns>Network__c</columns>
    <columns>Campaign_Name__c</columns>
    <columns>Profile_Name__c</columns>
    <columns>Sentiment__c</columns>
    <columns>Remote_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>